--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@ layout: default
 <div class="header-container jumbotron">
     <div class="container">
         <h1>Bioinformatics|Computational Biology|Data Science</h1>
-        <p>Simple and modern design for publishing blog posts, documentation and many more things about your project.
-          You can now clone and start to create a website for your project like this one.</p>
+        <p style="margin:0pt; padding:0pt";>PhD Candidate</p>
+        <p style="margin:0pt; padding:0pt";>NIH NRSA F31 Fellow</p>
+        <p>Harvard University</p>
         <p><a class="btn btn-primary btn-lg" href="{{ "/docs/home/" | relative_url }}" role="button">Learn more</a></p>
     </div>
 </div>
@@ -14,7 +15,7 @@ layout: default
 <div class="container">
     <div class="row">
         <div class="col-md-6">
-            <h2 class="header-light regular-pad">What is Jekyll?</h2>
+            <h2 class="header-light regular-pad">About this site</h2>
               <p class="lead">Jekyll is a simple, blog-aware, static site generator. It takes a template
               directory containing raw text files in various formats, runs it through
               a converter (like <a href="https://daringfireball.net/projects/markdown/">Markdown</a>)
