--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@ layout: default
                 <a href="https://www.grantome.com/grant/NIH/F31-CA239347-01"> National Insitute of Health (NIH) F31 award </a>
                 through the National Cancer Institute (NCI). </p>
                 <p class="lead"> My intentions for creating this site are twofold: (1) to serve as an online CV, and (2) to provide 
-                {% if page.sectionid=='docs' %} class="active" {% endif %}<a href="{{ "/docs/home/" | relative_url }}">documentation, resources, and hands-on examples</a> on how to run a variety of bioinformatic and statistical tools commonly used in cancer genomics, perform fundamental statical analyses, and develop a variety of machine learning models including neural networks. I've been extremely fortunate of the mentorship I've received in the Van Allen lab, and have enjoyed mentoring an increasing number of graduate students, medical students, and clinical fellows over the past year. My personal mentoring philosophy is to compress 
-                years worth of knowledge and experience into hands-on tutorials (with explainations!), and I hope that this site will help future 
-                generations of cancer researchers take their science to new heights.  
+                {% if page.sectionid=='docs' %} class="active" {% endif %}<a href="{{ "/docs/home/" | relative_url }}">documentation, resources, and hands-on examples</a> on how to run a variety of bioinformatic and statistical tools commonly used in cancer genomics, perform fundamental statical analyses, and develop a variety of machine learning models including neural networks. I've been extremely fortunate to be part of the Van Allen lab community, and have enjoyed mentoring an increasing number of graduate students, medical students, and clinical fellows. My personal mentoring philosophy is to compress years worth of knowledge and experience into hands-on tutorials (with explainations!), and I hope that this site will help future generations of cancer researchers take their science to new heights.  
               </p>
         </div>
         <div class="col-md-6 text-center">
