update gemile and landing page

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@ layout: default
 
 <div class="header-container jumbotron">
     <div class="container">
-        <h1>Bioinformatics|Computational Biology|Data Science</h1>
-        <p style="margin:0pt; padding:0pt";>PhD Candidate</p>
-        <p style="margin:0pt; padding:0pt";>NIH NRSA F31 Fellow</p>
-        <p>Harvard University</p>
+        <h2 style="color:white;">Computational Biology|Data Science|Machine Learning</h2>
+        <p style="margin:0pt; padding:0pt";>PhD, Bioinformatics and Integrative Genomics</p>
+        <p style="margin:0pt; padding:0pt";>Senior Biomedical Data Scientist</p>
+        <p>PathAI</p>
         <p><a class="btn btn-primary btn-lg" href="{{ "/docs/home/" | relative_url }}" role="button">Learn more</a></p>
     </div>
 </div>
@@ -16,15 +16,14 @@ layout: default
     <div class="row">
         <div class="col-md-6">
             <h2 class="header-light regular-pad">About</h2>
-              <p class="lead">I'm a PhD candidate in the 
-                <a href="http://dms.hms.harvard.edu/BIG/">Bioinformatics and Integrative Genomics (BIG) program</a> 
-                at Harvard Medical School, and a member of the <a href="https://vanallenlab.dana-farber.org/">Van Allen lab</a> 
-                at Dana-Farber Cancer Institute and The Broad Institute. My research focuses on melanoma genomics and transcriptomics, 
-                genomic correlates of immunotherapy response, and tumor clonal architecture and evolution. My research is supported by a 
-                <a href="https://www.grantome.com/grant/NIH/F31-CA239347-01"> National Insitute of Health (NIH) F31 award </a>
-                through the National Cancer Institute (NCI). </p>
-                <p class="lead"> My intentions for creating this site are twofold: (1) to serve as an online CV, and (2) to provide 
-                {% if page.sectionid=='docs' %} class="active" {% endif %}<a href="{{ "/docs/home/" | relative_url }}">documentation, resources, and hands-on examples</a> on how to run a variety of bioinformatic and statistical tools commonly used in cancer genomics, perform fundamental statical analyses, and develop a variety of machine learning models including neural networks. I've been extremely fortunate to be part of the Van Allen Lab community, and have enjoyed mentoring an increasing number of graduate students, medical students, and clinical fellows. My personal mentoring philosophy is to compress years worth of knowledge and experience into hands-on tutorials (with explainations!), and I hope that this site will help future generations of cancer researchers take their science to new heights.  
+              <p class="lead">I received my PhD in 
+                <a href="http://bigphd.hms.harvard.edu/">Bioinformatics and Integrative Genomics (BIG)</a> from Harvard University, where I was a member of the  <a href="https://vanallenlab.dana-farber.org/">Van Allen lab</a> 
+                at the Dana-Farber Cancer Institute and the Broad Institute. My research focused on melanoma genomics and transcriptomics, 
+                genomic correlates of immunotherapy response, DNA repair mechanisms such as HRD and MSI, and tumor clonal architecture and evolution. My research was supported by a National Insitute of Health
+                <a href="https://www.grantome.com/grant/NIH/F31-CA239347-01"> F31 award </a>
+                through the National Cancer Institute. My current position is a Senior Biomedical Data Scientist at <a href="http://www.pathai.com/">PathAI</a> where I develop and apply novel deep learning based approaches to pathology images to understand their clinical and molecular underpinnings.</p>
+                <p class="lead">My intentions for creating this site are twofold: (1) to serve as an online CV, and (2) to provide 
+                {% if page.sectionid=='docs' %} class="active" {% endif %}<a href="{{ "/docs/home/" | relative_url }}">documentation, resources, and hands-on examples</a> on how to run a variety of computational biology methods commonly used in cancer genomics, perform fundamental statical analyses, and develop a variety of machine learning models including neural networks. My personal mentoring philosophy is to compress years worth of knowledge and experience into hands-on tutorials, and I hope that this site will help future generations of researchers more easily add to their computational skillsets.  
               </p>
         </div>
         <div class="col-md-6 text-center">
